# image_resizer_service

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: develop.yml
include/: base64.h  image_processing.h  json_handler.h
src/: base64.cpp  image_processing.cpp  json_handler.cpp  main.cpp
tests/: CMakeLists.txt  base64_test.cpp  image_processing_test.cpp
